--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
         env:
           SECRET_KEY: test-secret-key
           DATABASE_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/taskmanager_ci
+          PYTHONPATH: .
         run: pytest -q
 
       - name: Build docker image
